se agrega version final

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -2,12 +2,19 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Ejemplo 9</title>
+  <title>Proyecto 2 MIA - Byron Par - Carnet: 2017010788</title>
   <base href="/">
+  <!-- Agrega aquí Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="assets/img/archivo2.ico">
 </head>
 <body>
 <app-root></app-root>
+<!-- Agrega aquí Bootstrap JS -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 </html>
